# test

./: README.md  pyproject.toml
Assets/Mahjong (10)/: Mahjong (10).dxf  Mahjong (10).eps
Assets/Mahjong (11)/: Mahjong (11).dxf  Mahjong (11).eps
Assets/Mahjong (12)/: Mahjong (12).dxf  Mahjong (12).eps
Assets/Mahjong (13)/: Mahjong (13).dxf  Mahjong (13).eps
Assets/Mahjong (14)/: Mahjong (14).dxf  Mahjong (14).eps
Assets/Mahjong (15)/: Mahjong (15).dxf  Mahjong (15).eps
Assets/Mahjong (16)/: Mahjong (16).dxf  Mahjong (16).eps
Assets/Mahjong (17)/: Mahjong (17).dxf  Mahjong (17).eps
Assets/Mahjong (18)/: Mahjong (18).dxf  Mahjong (18).eps
Assets/Mahjong (19)/: Mahjong (19).dxf  Mahjong (19).eps
Assets/Mahjong (2)/: Mahjong (2).dxf  Mahjong (2).eps
Assets/Mahjong (20)/: Mahjong (20).dxf  Mahjong (20).eps
Assets/Mahjong (21)/: Mahjong (21).dxf  Mahjong (21).eps
Assets/Mahjong (22)/: Mahjong (22).dxf  Mahjong (22).eps
Assets/Mahjong (23)/: Mahjong (23).dxf  Mahjong (23).eps
Assets/Mahjong (24)/: Mahjong (24).dxf  Mahjong (24).eps
Assets/Mahjong (25)/: Mahjong (25).dxf  Mahjong (25).eps
Assets/Mahjong (26)/: Mahjong (26).dxf  Mahjong (26).eps
Assets/Mahjong (27)/: Mahjong (27).dxf  Mahjong (27).eps
Assets/Mahjong (28)/: Mahjong (28).dxf  Mahjong (28).eps
Assets/Mahjong (29)/: Mahjong (29).dxf  Mahjong (29).eps
Assets/Mahjong (3)/: Mahjong (3).dxf  (+1 more)
mahsol/: __init__.py  __main__.py  engine.py  generator.py  layout.py  models.py  solver.py  tileset.py  ui_pygame.py
tests/: test_engine.py  test_generator_solver.py  test_geometry.py
(+40 files in other folders)
