[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahsol"
version = "0.1.0"
description = "Minimal Mahjong Solitaire prototype"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
